--- a/index.html
+++ b/index.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 	<meta charset="utf-8">
 	<title>cece's website</title>
 	<style type="text/css">
-		#cloud{
-			background-color: skyblue;
-			width: 100px;
-			height:100px ;
-			background-image: ;
+		#hearts{
+			background-color:lightpink;
+			width: 1350px;
+			height:875px;
+			background-size: cover;
+			
+
 		}
 
+#purpleflower{
 
+	height: 25 px;
+	width: 25px;
+
+}
 
 	body{ 
-		background-image: url(cloud.png); 
-		background-size: cover;
+		margin: 0px;
+		font-family: 'Anton', sans-serif;
+		font-size: 50px;
+
 	}
-		
+
+	a{
+	}
+	
 	</style>
 </head>
 <body>
-	
+ 
+ <div id= "purpleheart"></div>
+ <a href=""></a>
+
+<center><div id="hearts">
+
+	<p>C E C E ' S  W E B S I T E</p>
+
+<a href="journal.html">
+<p>j o u r n a l</p></a>
+
+<a href="about.html">
+<p>a b o u t</p></a>
+<a href="home.html">
+<p>h o m e</p></a>
+<a href="projects.html">
+<p>p r o j e c t s</p></a>
+<font></font>
+</a>
+
+</div></center>
 
 
-<a href="journal.html"><div id="cloud"></div></a>
+
 </body>
 </html>
 </head>
