--- a/journal.html
+++ b/journal.html
@@ -2,31 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>cece's website</title>
-	<style type="text/css">
-		#cloud{
-			background-color: skyblue;
-			width: 100px;
-			height:100px ;
-			background-image: ;
-		}
-
-
-
-	body{ 
-		background-image: url(cloud.png); 
-		background-size: cover;
-	}
-		
-	</style>
-</head>
-<body>
-	
-
-
-<a href="journal.html"><div id="cloud"></div></a>
-</body>
-</html>
+	<title></title>
 </head>
 <body>
 
