--- a/index.html
+++ b/index.html
@@ -1,62 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
+
+
 	<meta charset="utf-8">
+
+
 	<title>cece's website</title>
 	<style type="text/css">
-		#hearts{
-			background-color:lightpink;
-			width: 1350px;
-			height:875px;
-			background-size: cover;
-			
 
-		}
 
-#purpleflower{
-
-	height: 25 px;
-	width: 25px;
+body{
+	background-color:lightpink;
+	margin: 0px;
+	font-family:font-family: 'Lobster Two', cursive;
+	font-size: 60px;
 
 }
+	
+		
 
-	body{ 
-		margin: 0px;
-		font-family: 'Anton', sans-serif;
+a{
+text-decoration: none;
+color: ghostwhite;
+}
+
+
+
+	#hearts{
+			width: 300px;
+			height: 400px;
+			background-image: url(heart.png);
+			background-size:cover;
+			position: absolute;
+		}
+	#title{
 		font-size: 50px;
+		color: deeppink;
 
-	}
-
-	a{
 	}
 	
+	
 	</style>
+
+
 </head>
+
+
 <body>
- 
- <div id= "purpleheart"></div>
- <a href=""></a>
+	<div id="hearts"></div>
 
-<center><div id="hearts">
 
-	<p>C E C E ' S  W E B S I T E</p>
+<center>
+
+	<p div id= "title">welcome to cece's website!
+
+	</p>
 
 <a href="journal.html">
-<p>j o u r n a l</p></a>
+<p>journal</p></a>
 
 <a href="about.html">
-<p>a b o u t</p></a>
-<a href="home.html">
-<p>h o m e</p></a>
-<a href="projects.html">
-<p>p r o j e c t s</p></a>
-<font></font>
-</a>
 
-</div></center>
+<p>about</p></a>
+<a href="projects.html">
+<p>projects</p></a>
+
+
+
+</center>
 
 
 
