--- a/index.html
+++ b/index.html
@@ -68,8 +68,15 @@ color: ghostwhite;
 <a href="about.html">
 
 <p>about</p></a>
+
+
 <a href="projects.html">
-<p>projects</p></a>
+
+
+<p>projects</p>
+
+
+</a>
 
 
 
