adding outfit picker

--- a/projects.html
+++ b/projects.html
@@ -8,5 +8,8 @@
 	<a href="spirit.html">
 	<p>what emoji are you?</p></a>
 
+	<a href="ceceOutfitPicker/outfitPicker.html">
+	<p>outfit picker</p></a>
+
 </body>
 </html>
